--- a/app/playlists/templates/base.html
+++ b/app/playlists/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>LinkHub</title>
   <meta charset="utf-8">
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <link rel="icon" type="image/x-icon" href="{% static '/images/favicon.ico' %}" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
