--- a/app/accounts/templates/account/password_set.html
+++ b/app/accounts/templates/account/password_set.html
@@ -6,6 +6,7 @@
     <h3 class="h3" id="head_banner">{% trans "Set Password" %}</h3>
 
     <h5 class="h5" id="head_banner">{% trans "You still don't have password" %}</h5>
+    <span>Set password for make all settings to be available.</span>
 
     <form method="POST" action="" id="change_password_form">
         {% csrf_token %}
